--- a/codegen.yml
+++ b/codegen.yml
@@ -5,7 +5,7 @@ scalars:
     DateTime: Date
     JSON: "{ [key: string]: any }"
 config:
-    contextType: ../context#Context
+    contextType: ../utils/context#Context
 generates:
   src/generated/graphql.ts:
     plugins:
